Bug 204731 - Variant(IDispatch) properties, if empty cause a crash. r=adamlock, sr=alecf, a=asa